<resources>

    <string name="app_name">momsone</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_main">맘스원</string>
    
    <string name="main_button_1_desc">원아알림장</string>
    <string name="main_button_2_desc">가정통신문</string>
    <string name="main_button_3_desc">쪽지</string>
	<string name="main_button_4_desc">투약의뢰</string>
    <string name="main_button_5_desc">출결관리</string>
    <string name="main_button_6_desc">식단표</string>    
    <string name="main_button_7_desc">1대1상담</string>    
    <string name="main_button_8_desc">원정보</string>
    <string name="main_button_9_desc">원소식</string>


    <string name="main_button_10_desc">자유게시판</string>	
    <string name="main_button_11_desc">우리아이앨범</string>    
    <string name="main_button_12_desc">실시간앨범</string>
    <string name="main_button_13_desc">행사앨범</string>
	<string name="main_button_14_desc">우리반앨범</string>
    <string name="main_button_15_desc">우리반이야기</string>
    <string name="main_button_16_desc">맘스원공지</string>
    <string name="main_button_17_desc">맘스원제안</string>
    
    <string name="main_button_18_desc">교육육아비법</string>  
    <string name="main_button_19_desc">사회정책토론</string>
    <string name="main_button_20_desc">연예속닥속닥</string>
    <string name="main_button_21_desc">유머2번지</string>
    <string name="main_button_22_desc">고민상담</string>
    <string name="main_button_23_desc">억울사연</string>
    <string name="main_button_24_desc">정보공유</string>
    <string name="main_button_25_desc">무료나눔</string>
    <string name="main_button_26_desc">자유talk</string>
    
    <string name="main_button_27_desc">교육기관찾기</string>
    <string name="main_button_28_desc">교육기관유형</string>
    <string name="main_button_29_desc">입학상담</string>
    <string name="main_button_30_desc">대기신청내역</string>    
    
    
    
    
    
    
    
    <string name="sub_back_desc">뒤로</string>
    <string name="header_logo_desc">맘스원로고</string>
    <string name="title_activity_sub">맘스1</string>
    <string name="title_activity_title">맘스원</string>
    <string name="title_logo">행복한 엄마\n즐거운 아이</string>
    <string name="title_activity_login">맘스원</string>    
    <string name="login_text">회원가입 및 아이디/비밀번호 찾기는\nPC에서 이용 가능합니다.</string>
    
    <string name="sub_header_text">서브메뉴</string>
    
    
    
    
    
</resources>