<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >
    
    
    

    <Button
        android:id="@+id/main_Button_1"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_1_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_1_desc"
        android:textSize="10dp" />

    <Button
        android:id="@+id/main_Button_2"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_2_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_2_desc"
        android:textSize="10dp" />

    <Button
        android:id="@+id/main_Button_3"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_3_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_3_desc"
        android:textSize="10dp" />

<!--  두번째 줄..  -->

    <Button
        android:id="@+id/main_Button_4"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_4_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_4_desc"
        android:textSize="10dp" />

    <Button
        android:id="@+id/main_Button_5"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_5_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_5_desc"
        android:textSize="10dp" />

    <Button
        android:id="@+id/main_Button_6"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_6_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_6_desc"
        android:textSize="10dp" />

    <!--  세번째 줄..  -->
    
    <Button
        android:id="@+id/main_Button_7"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="215dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_7_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_7_desc"
        android:textSize="10dp" />

    <Button
        android:id="@+id/main_Button_8"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="215dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_8_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_8_desc"
        android:textSize="10dp" />
	
    <Button
        android:id="@+id/main_Button_9"
        style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="215dp"
        android:background="@drawable/btn_sample"
        android:contentDescription="@string/main_button_9_desc"
        android:gravity="bottom|center_horizontal"
        android:padding="0dp"
        android:text="@string/main_button_9_desc"
        android:textSize="10dp" />
       

</RelativeLayout>
    
    